  RuntimePermission "accessDeclaredMembers" is needed in applications using
  SecurityManager.  (Patrick Zhai, Ben Trent, Uwe Schindler)

* GITHUB#12321: DaciukMihovAutomatonBuilder has been marked deprecated in preparation of reducing its visibility in
  a future release. (Greg Miller)

* GITHUB#12268: Add BitSet.clear() without parameters for clearing the entire set
  (Jonathan Ellis)

New Features
---------------------

* GITHUB#12257: Create OnHeapHnswGraphSearcher to let OnHeapHnswGraph to be searched in a thread-safety manner. (Patrick Zhai)

* GITHUB#12302, GITHUB#12311: Add vectorized implementations of VectorUtil.dotProduct(),
  squareDistance(), cosine() with Java 20 jdk.incubator.vector APIs. Applications started
  with command line parameter "java --add-modules jdk.incubator.vector" on exactly Java 20
  will automatically use the new vectorized implementations if running on a supported platform
  (x86 AVX2 or later, ARM NEON). This is an opt-in feature and requires explicit Java
  command line flag! When enabled, Lucene logs a notice using java.util.logging. Please test
  thoroughly and report bugs/slowness to Lucene's mailing list.
  (Chris Hegarty, Robert Muir, Uwe Schindler)

Improvements
---------------------

* GITHUB#12245: Add support for Score Mode to `ToParentBlockJoinQuery` explain. (Marcus Eagan via Mikhail Khludnev)

* GITHUB#12305: Minor cleanup and improvements to DaciukMihovAutomatonBuilder. (Greg Miller)

* GITHUB#12325: Parallelize AbstractKnnVectorQuery rewrite across slices rather than segments. (Luca Cavanna)

* GITHUB#12333: NumericLeafComparator#competitiveIterator makes better use of a "search after" value when paginating.
  (Chaitanya Gohel)

* GITHUB#12290: Make memory fence in ByteBufferGuard explicit using `VarHandle.fullFence()`

* GITHUB#12320: Add "direct to binary" option for DaciukMihovAutomatonBuilder and use it in TermInSetQuery#visit.
  (Greg Miller)

Optimizations
---------------------
